objects/ER_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Activated_Date__c</fullName>
        <label>Activated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Backup_Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Backup Requestor</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>4_4 - LegalApttusClone</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>4_4 - Legal</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>4_4 - Legal_Apttus</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>General_Work_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ER_Agreement_Status__c</fullName>
        <label>ER Agreement Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employee_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employee Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Name_in_SFDC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Name in SFDC</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>4_4 - LegalApttusClone</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>4_4 - Legal</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>4_4 - Legal_Apttus</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Restricted_Employee_Form</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee_Restricted_From__c</fullName>
        <inlineHelpText>Note that the text provided here will be shared with the employee.</inlineHelpText>
        <label>What is the employee restricted from?</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Existing_Project_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Name</label>
        <referenceTo>ER_Project__c</referenceTo>
        <relationshipName>ER_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Frequency_of_Notification__c</fullName>
        <label>Frequency of Notification</label>
        <picklist>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>180</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>240</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>270</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>330</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>365</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Associated_Project__c</fullName>
        <label>Has Associated Project</label>
        <picklist>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_End_Date__c</fullName>
        <label>Does this restriction have an end date?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Existing_Project__c</fullName>
        <label>Is this an existing project?</label>
        <picklist>
            <picklistValues>
                <fullName>Existing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manager_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manager Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Project_Name__c</fullName>
        <label>New Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Applicable_Information__c</fullName>
        <label>Other Applicable Information</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Lead</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$User.Employment_Status__c</field>
                <operation>equals</operation>
                <value>Available</value>
            </filterItems>
            <filterItems>
                <field>$User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>notEqual</operation>
                <value>Chatter External User, Chatter Free User, Chatter Moderator User, Contract Manager, Customer Community User, Customer Portal Manager Custom, Force.com - App Subscription User, Gold Partner User, Marketing User, Overage High Volume Customer Portal User, Pa</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Lead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_For_Other__c</fullName>
        <label>Please describe other reason</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Number__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Conflict of Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Settlement Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merger and Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requester_EMT_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ER_Agreements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Restriction_End_Date__c</fullName>
        <label>Restriction End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Restriction_Reason__c</fullName>
        <inlineHelpText>Note that the text provided here will be shared with the employee.</inlineHelpText>
        <label>Restriction Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Restriction_Start_Date__c</fullName>
        <label>Restriction Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Seeking_Assistance__c</fullName>
        <label>Seeking Assistance</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Category__c</fullName>
        <label>Status Category</label>
        <picklist>
            <picklistValues>
                <fullName>Request</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Authoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Signatures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Filing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Effect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <controllingField>Status_Category__c</controllingField>
            <picklistValues>
                <fullName>Activated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Author Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Being Amended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Being Renewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Being Terminated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fully Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Amendment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Reconciliation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Signatures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Language Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Language Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Party Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Party Signatures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Signatures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reconciled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Request Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requestor Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signature Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initiated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>URL_Link_To_Request__c</fullName>
        <formula>$Label.RVP_Notification_Forecast_URL + &apos;/apex/RestrictedEmployeeForm?id=&apos; + Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL Link To Request</label>
        <type>Text</type>
    </fields>
    <label>Restricted Employee Form</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Activated_Date__c</columns>
        <columns>Requester_EMT_1__c</columns>
        <columns>Backup_Requestor__c</columns>
        <columns>Has_End_Date__c</columns>
        <columns>Employee_Access__c</columns>
        <columns>ER_Agreement_Status__c</columns>
        <columns>Frequency_of_Notification__c</columns>
        <columns>Has_Associated_Project__c</columns>
        <columns>Is_Existing_Project__c</columns>
        <columns>Manager_Access__c</columns>
        <columns>New_Project_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Restricted Employee Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Restricted Employee Form</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>